--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </tr>
         <tr>
             <td rowspan="3"><img src="./img/1.jpg" alt="" width="200" height="200"></td>
-            <td colspan="2">Lê Thanh Yên</td>
+            <td colspan="2">Nguyễn Ngọc Tuyết Ny</td>
         </tr>
         <tr>
-            <td colspan="2">MSSV: 2001216333</td>
+            <td colspan="2">MSSV: 2001200661</td>
         </tr>
         <tr>
-            <td colspan="2">Lớp 12DHTH09</td>
+            <td colspan="2">Lớp 11DHTH9</td>
         </tr>
         <tr>
             <td colspan="3">
